Membership Improving. Most Functions working as needed.

--- a/src/main/webapp/memberShip/patient.xhtml
+++ b/src/main/webapp/memberShip/patient.xhtml
@@ -31,7 +31,7 @@
                                     <p:commandButton  
                                         ajax="false"
                                         value="To Add to Family" 
-                                        action="#{patientController.saveSelected()}"></p:commandButton>
+                                        action="#{patientController.saveSelectedAndToFamily()}"></p:commandButton>
 
                                     <p:commandButton   ajax="false"
                                                       value="Clear For New Aptient" 
