--- a/src/main/webapp/reportLab/investigation_counts.xhtml
+++ b/src/main/webapp/reportLab/investigation_counts.xhtml
@@ -134,7 +134,7 @@
                             <f:facet name="header">
                                 <h:outputLabel value="Test ID"/>
                             </f:facet>
-                            <p:commandButton value="Edit Ix #{c.investigation.id}" ajax="false" 
+                            <p:commandButton value="Edit" ajax="false" 
                                              action="/lab/investigation" style="width: 220px;"
                                              onclick="this.form.target = '_blank'">
                                 <f:setPropertyActionListener value="#{c.investigation}" target="#{investigationController.current}" ></f:setPropertyActionListener>
