--- a/src/main/webapp/lab/report_format.xhtml
+++ b/src/main/webapp/lab/report_format.xhtml
@@ -130,16 +130,16 @@
                                     <p:panel header="Positioning" >
                                         <h:panelGrid  columns="11">
                                             <h:outputText value="Left" />
-                                            <p:inputText style="width: 50px;"  autocomplete="off" id="txtLeft" value="#{commonReportItemController.current.riLeft}"/>
+                                            <p:inputText style="width: 80px;"  autocomplete="off" id="txtLeft" value="#{commonReportItemController.current.riLeft}"/>
                                             <div style="min-width: 20px;"></div>
                                             <h:outputText value="Top"/>
-                                            <p:inputText  style="width: 50px;"  autocomplete="off" id="txtTop" value="#{commonReportItemController.current.riTop}"/>
+                                            <p:inputText  style="width: 80px;"  autocomplete="off" id="txtTop" value="#{commonReportItemController.current.riTop}"/>
                                             <div style="min-width: 20px;"></div>
                                             <h:outputText value="Width"/>
-                                            <p:inputText  style="width: 50px;"  autocomplete="off" id="txtWidth" value="#{commonReportItemController.current.riWidth}" />
+                                            <p:inputText  style="width: 80px;"  autocomplete="off" id="txtWidth" value="#{commonReportItemController.current.riWidth}" />
                                             <div style="min-width: 20px;"></div>
                                             <h:outputText value="Height"/>
-                                            <p:inputText  style="width: 50px;"  autocomplete="off" id="txtHeight" value="#{commonReportItemController.current.riHeight}"/>
+                                            <p:inputText  style="width: 80px;"  autocomplete="off" id="txtHeight" value="#{commonReportItemController.current.riHeight}"/>
 
                                         </h:panelGrid>
                                         <h:panelGrid columns="5" >
@@ -232,18 +232,20 @@
                                                                      target="#{reportFormatController.current}" ></f:setPropertyActionListener>
                                     </p:commandButton>
                                     <p:commandButton value="List Investigation Using this Format" ajax="false" 
-                                                     action="report_format_category">
+                                                     >
                                         <f:setPropertyActionListener value="#{commonReportItemController.category}" 
                                                                      target="#{investigationController.categoryForFormat}" ></f:setPropertyActionListener>
                                     </p:commandButton>
                                     <p:dataTable value="#{investigationController.investigationWithSelectedFormat}"
-                                                 var="i" rowKey="#{i.id}" >
+                                                 var="i" rowKey="#{i.id}" 
+                                                 
+                                                 >
                                         <p:column >
-                                            <p:commandButton value="#{i.name}" ajax="false" action="investigation"
-                                                     onclick="this.form.target = '_blank'">
-                                        <f:setPropertyActionListener value="#{i}" 
-                                                                     target="#{investigationController.current}" ></f:setPropertyActionListener>
-                                    </p:commandButton>
+                                            <p:commandLink value="#{i.name}" ajax="false" action="investigation"
+                                                           onclick="this.form.target = '_blank'">
+                                                <f:setPropertyActionListener value="#{i}" 
+                                                                             target="#{investigationController.current}" ></f:setPropertyActionListener>
+                                            </p:commandLink>
                                         </p:column>
                                     </p:dataTable>
 
