Reported Time changed to hh:mm a format.

--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -85,7 +85,7 @@
                         <td>:</td>
                         <td></td>
                         <td>
-                            <h:outputLabel class="billDetailsFiveFive" value="#{cc.attrs.bill.deptId}"  >
+                            <h:outputLabel class="billDetailsFiveFive" value="#{cc.attrs.bill.insId}"  >
                             </h:outputLabel>
                         </td>
                         <td></td>
