--- a/src/main/webapp/lab/investigation_list.xhtml
+++ b/src/main/webapp/lab/investigation_list.xhtml
@@ -22,32 +22,36 @@
                         <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >
                             <p:printer target="panIx" />
                         </p:commandButton>
-                        <p:commandButton id="excel" ajax="false" value="Excel" onclick="onSubmitButton();"  >
-                            <p:dataExporter target="tbl" type="xls" fileName="List of All Investigations"  />
+                        <p:commandButton id="excel" ajax="false" value="Excel"  >
+                            <p:dataExporter target="tbl" type="csv" fileName="List of All Investigations"  />
                         </p:commandButton>
                     </f:facet>
-                    <div id="printHeader" style="text-align: center; font-family: serif;">
-                        <h:outputLabel value="#{sessionController.institution.name}" style="font-size: 20px;"></h:outputLabel>
-                        <br> </br>
-                        <h:outputLabel value="Lab Investigation List" style="font-family: serif;" ></h:outputLabel>
-                    </div>
-                    <p:dataTable id="tbl" rowIndexVar="rowIndex" value="#{investigationController.allIxs}" var="ix"  >
-                        <p:column headerText="No." >
+                    <p:dataTable id="tbl" rowIndexVar="rowIndex" value="#{investigationController.allIxs}" var="ix" 
+                                 rows="20"
+                                 paginator="true"
+                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                 rowsPerPageTemplate="20, 50, 100" 
+                                 >
+                        <p:column headerText="No." width="30">
                             <h:outputLabel value="#{rowIndex + 1}" ></h:outputLabel>
                         </p:column>  
-                        <p:column headerText="Investigation" >
+                        <p:column headerText="Investigation" sortBy="#{ix.name}" filterBy="#{ix.name}" filterMatchMode="contains">
                             <h:outputLabel value="#{ix.name}" ></h:outputLabel>
                         </p:column>
                         <p:column headerText="Category" >
                             <h:outputLabel value="#{ix.category.name}" ></h:outputLabel>
                         </p:column>
-                        <p:column headerText="Institution" sortBy="#{ix.institution.name}">
+                        <p:column headerText="Institution" sortBy="#{ix.institution.name}" filterBy="#{ix.institution.name}" filterMatchMode="contains">
                             <h:outputLabel value="#{ix.institution.name}" ></h:outputLabel>
                         </p:column>
-                        <p:column headerText="Department" sortBy="#{ix.department.name}">
+                        <p:column headerText="Department" sortBy="#{ix.department.name}" filterBy="#{ix.department.name}" filterMatchMode="contains">
                             <h:outputLabel value="#{ix.department.name}" ></h:outputLabel>
                         </p:column>
-                        
+                        <p:column headerText="Price" sortBy="#{ix.total}" width="200" style="text-align: right; padding-right: 20px;">
+                            <h:outputLabel value="#{ix.total}" >
+                                <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                            </h:outputLabel>
+                        </p:column>
                     </p:dataTable>
                 </p:panel>
             </h:form>
