--- a/src/main/webapp/admin_view_user.xhtml
+++ b/src/main/webapp/admin_view_user.xhtml
@@ -12,11 +12,11 @@
         <ui:composition template="/resources/template/template.xhtml">
 
             <ui:define name="content">
-                <h:panelGroup rendered="#{!webUserController.hasPrivilege('AdminManagingUsers')}" >
+                <h:panelGroup rendered="#{!webUserController.hasPrivilege('AdminManagingUsers') and !sessionController.firstLogin }" >
                     <h:outputLabel value="You are NOT authorized"/>
                 </h:panelGroup>
 
-                <h:panelGroup rendered="#{webUserController.hasPrivilege('AdminManagingUsers')}" >
+                <h:panelGroup rendered="#{webUserController.hasPrivilege('AdminManagingUsers') or sessionController.firstLogin }" >
                     <h:form  >
                         <p:panelGrid columns="5" >
                             <p:outputLabel value="Search Users" ></p:outputLabel>
