--- a/src/main/webapp/admin_change_password.xhtml
+++ b/src/main/webapp/admin_change_password.xhtml
@@ -39,7 +39,8 @@
                             <p:defaultCommand target="btnChangePassword"/>
 
                             <p:commandButton id="btnChangePassword" ajax="false" value="Change Password" 
-                                             actionListener="#{webUserController.changeCurrentUserPassword}" onclick="onSubmitButton();"/>
+                                             action="#{webUserController.changeCurrentUserPassword}" 
+                                             onclick="onSubmitButton();"/>
 
                         </p:panelGrid>
 
