--- a/src/main/webapp/lab/replaceable_ix.xhtml
+++ b/src/main/webapp/lab/replaceable_ix.xhtml
@@ -25,7 +25,8 @@
                             </p:autoComplete>
 
 
-                            <h:outputLabel value="" ></h:outputLabel>
+                            <h:commandButton value="Back" action="/lab/investigation" ></h:commandButton>
+
 
                             <h:outputLabel value="Select Child Ix" ></h:outputLabel>
                             
