--- a/src/main/webapp/dataAdmin/manage_item_fees_bulk.xhtml
+++ b/src/main/webapp/dataAdmin/manage_item_fees_bulk.xhtml
@@ -5,8 +5,7 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:pe="http://primefaces.org/ui/extensions">
+                xmlns:p="http://primefaces.org/ui">
 
 
     <ui:define name="content">
@@ -19,13 +18,22 @@
                     </f:facet>
 
                     <h:panelGrid columns="1" styleClass="alignTop" >
-                        <h:panelGrid columns="3" >
-                            <p:commandButton ajax="false" value="Add Fees For Selected Items" action="#{itemController.createItemFessForItemsWithoutFee}" >
+                        <h:panelGrid columns="4" >
+                            <p:commandButton ajax="false" 
+                                             value="Add Fees For Selected Items" action="#{itemController.createItemFessForItemsWithoutFee}" >
                             </p:commandButton>
-                            <p:commandButton ajax="false" value="Refresh Items" action="#{itemController.refreshInvestigationsAndServices}" >
+
+                            <p:commandButton 
+                                ajax="false" value="Fix Items Totals" action="#{itemController.updateSelectedItemFees}" >
                             </p:commandButton>
-                            <p:commandButton ajax="false" value="Update Items" action="#{itemController.updateSelectedItemFees}" >
+                            <p:commandButton 
+                                ajax="false" value="Fix Discount Allowed Property" action="#{itemController.updateSelectedFeesForDiscountAllow}" >
                             </p:commandButton>
+
+                            <p:commandButton 
+                                ajax="false" value="Refresh Items" action="#{itemController.refreshInvestigationsAndServices}" >
+                            </p:commandButton>
+
                         </h:panelGrid>
                         <p:panel >
                             <p:dataTable  value="#{itemController.investigationsAndServices}" 
@@ -42,14 +50,7 @@
                                 <p:column  selectionMode="multiple" style="width: 10px;">                            
                                 </p:column>
 
-                                <p:column width="20" >
-                                    <f:facet name="header">
-                                        <h:outputLabel value="No" />
-                                    </f:facet>
-                                    <h:outputLabel value="#{s+1}" />
-                                </p:column>
-
-                                <p:column   sortBy="#{i.name}"
+                                <p:column   sortBy="#{i.name}" width="200"
                                             filterMatchMode="contains" filterBy="#{i.name}" >  
                                     <f:facet name="header">
                                         <h:outputLabel value="Item Name" />
@@ -57,7 +58,7 @@
                                     <h:outputLabel value="#{i.name}"/>
                                 </p:column>
 
-                                <p:column sortBy="#{i.institution.name}"
+                                <p:column sortBy="#{i.institution.name}" width="200"
                                           filterMatchMode="contains" filterBy="#{i.institution.name}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Institution" />
@@ -65,38 +66,56 @@
                                     <h:outputLabel value="#{i.institution.name}" ></h:outputLabel>
                                 </p:column>
 
-                                <p:column sortBy="#{i.department.name}"
+                                <p:column sortBy="#{i.department.name}" width="120"
                                           filterMatchMode="contains" filterBy="#{i.department.name}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Department" />
                                     </f:facet>
                                     <h:outputLabel value="#{i.department.name}" ></h:outputLabel>
                                 </p:column>
-                                <p:column sortBy="#{i.dblValue}" width="100"
+                                <p:column sortBy="#{i.dblValue}" width="80"
                                           filterMatchMode="contains" filterBy="#{i.dblValue}">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Total Fee" />
+                                        <h:outputLabel value="Total Fee" >
+
+                                        </h:outputLabel>
                                     </f:facet>
-                                    <h:outputLabel value="#{i.total}" ></h:outputLabel>
+                                    <h:outputLabel value="#{i.total}" >
+                                        <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                                    </h:outputLabel>
                                 </p:column>
                                 <p:column style="text-align: right;">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Local Fees" />
+                                        <h:outputLabel value="Fees" />
                                     </f:facet>
-                                    <ui:repeat value="#{i.itemFeesAuto}" var="itfe" >
-                                        <p:inputText id="f" value="#{itfe.fee}" style="width: 100px;"></p:inputText>
-                                    </ui:repeat>
+
+                                    <p:dataTable  value="#{i.itemFeesActive}" var="itfe" >
+                                        <p:column headerText="Name">
+                                            <p:outputLabel value="#{itfe.name}" ></p:outputLabel>
+                                        </p:column>
+                                        <p:column headerText="Type">
+                                            <p:outputLabel value="#{itfe.feeType}" ></p:outputLabel>
+                                        </p:column>
+                                        <p:column headerText="Discount">
+                                            <p:outputLabel value="#{itfe.discountAllowed?'Allowed':'Not Allowed'}" ></p:outputLabel>
+                                        </p:column>
+                                        <p:column headerText="Fee">
+                                            <p:outputLabel value="#{itfe.fee}" >
+                                                <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                                            </p:outputLabel>
+                                        </p:column>
+                                        <p:column headerText="Foreigner">
+                                            <p:outputLabel value="#{itfe.ffee}" >
+                                                <f:convertNumber pattern="#,##0.00" ></f:convertNumber>  
+                                            </p:outputLabel>
+                                        </p:column>
+                                    </p:dataTable>
+
+
                                 </p:column>
-                                <p:column style="text-align: right;">
-                                    <f:facet name="header">
-                                        <h:outputLabel value="Foreigner Fees" />
-                                    </f:facet>
-                                    <ui:repeat value="#{i.itemFeesAuto}" var="itfe" >
-                                        <p:inputText id="ff" value="#{itfe.ffee}" style="width: 100px;"></p:inputText>
-                                    </ui:repeat>
-                                </p:column>
-                                <p:column headerText="Actions">
-                                    <p:commandButton ajax="false" value="Edit" action="/common/manage_item_fees" >
+
+                                <p:column headerText="Actions" width="60">
+                                    <p:commandButton ajax="false" value="Edit" action="${itemFeeManager.toManageItemFees()}"  actionListener="#{viewController.makeBulkFeesAsPreviousPage()}">
                                         <f:setPropertyActionListener value="#{i}" target="#{itemFeeManager.item}" ></f:setPropertyActionListener>
                                     </p:commandButton>
                                 </p:column>
